--- a/wolfssl/CMakeLists.txt
+++ b/wolfssl/CMakeLists.txt
@@ -9,13 +9,13 @@ cmake_minimum_required(VERSION 3.0.0 FATAL_ERROR)
 # require C99 standard
 set(C_STANDARD 99)
 
-
+set(WOLFSSL_USER_SETTINGS "yes" CACHE STRING "")
 
 set(WOLFSSL_SOURCE "C:/share/gitlab/wolfssl-5.6.3-stable" CACHE PATH "Path to wolfSSL sources")
 option(WOLFSSL_USER_IO "" OFF)
 option(WOLFSSL_DEBUG "" ON)
 
-include_directories(${CMAKE_BINARY_DIR}/include ${CMAKE_CURRENT_SOURCE_DIR}/include ${WOLFSSL_SOURCE})
+include_directories(${CMAKE_BINARY_DIR}/include ${CMAKE_CURRENT_SOURCE_DIR}/include ${WOLFSSL_SOURCE} ${CMAKE_CURRENT_SOURCE_DIR})
 
 set(TLSLIB_SRC
     ${CMAKE_CURRENT_SOURCE_DIR}/TlsLib.c
