--- a/mbedtls/CMakeLists.txt
+++ b/mbedtls/CMakeLists.txt
@@ -9,6 +9,10 @@ cmake_minimum_required(VERSION 3.0.0 FATAL_ERROR)
 # require C99 standard
 set(C_STANDARD 99)
 
+if (CW_ENV_DEBUG_ENABLE)
+add_definitions(-DMBEDTLS_DEBUG_C)
+endif()
+
 set(MBEDTLS_SOURCE "C:/share/gitlab/mbedtls-3.4.0" CACHE PATH "Path to mbedtls sources")
 
 include_directories(${CMAKE_BINARY_DIR}/include ${CMAKE_CURRENT_SOURCE_DIR}/include ${MBEDTLS_SOURCE}/include ${CMAKE_CURRENT_SOURCE_DIR})
