build mbedtls and wolf at once

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,15 +41,15 @@ include_directories(${CMAKE_BINARY_DIR}/include ${CMAKE_CURRENT_SOURCE_DIR}/incl
 
 # LIBRARIES
 
-## add_subdirectory(wolfssl)
-## 
-## add_executable(${PROJECT_NAME}-wolfssl-client ${CLIENT_SRC})
-## 
-## target_link_libraries(${PROJECT_NAME}-wolfssl-client crazywolf-common tlslib-wolfssl crazywolf-common)
-## 
-## add_executable(${PROJECT_NAME}-wolfssl-server ${SERVER_SRC})
-## 
-## target_link_libraries(${PROJECT_NAME}-wolfssl-server crazywolf-common tlslib-wolfssl crazywolf-common)
+add_subdirectory(wolfssl)
+
+add_executable(${PROJECT_NAME}-wolfssl-client ${CLIENT_SRC})
+
+target_link_libraries(${PROJECT_NAME}-wolfssl-client crazywolf-common tlslib-wolfssl crazywolf-common)
+
+add_executable(${PROJECT_NAME}-wolfssl-server ${SERVER_SRC})
+
+target_link_libraries(${PROJECT_NAME}-wolfssl-server crazywolf-common tlslib-wolfssl crazywolf-common)
 
 # ------------------------------------------------------------------------------
 
