--- a/wolfssl/CMakeLists.txt
+++ b/wolfssl/CMakeLists.txt
@@ -16,6 +16,8 @@ set(BUILD_DTLS_COMMON "yes" CACHE STRING "")
 set(BUILD_SP "no" CACHE STRING "")
 set(BUILD_SP_X86_64 "no" CACHE STRING "")
 set(WOLFSSL_ECCSHAMIR "no" CACHE STRING "")
+set(WOLFSSL_CRYPT_TESTS "no" CACHE STRING "")
+set(WOLFSSL_EXAMPLES "no" CACHE STRING "")
 
 include_directories(${CMAKE_BINARY_DIR}/include ${CMAKE_CURRENT_SOURCE_DIR}/include ${WOLFSSL_SOURCE} ${CMAKE_CURRENT_SOURCE_DIR})
 
