wolfssl dtls works now

--- a/mbedtls/CMakeLists.txt
+++ b/mbedtls/CMakeLists.txt
@@ -5,6 +5,7 @@ project(tlslib-mbedtls LANGUAGES C)
 # cmake minimum version
 cmake_minimum_required(VERSION 3.0.0 FATAL_ERROR)
 
+set(MBEDTLS_SOURCE "C:/share/gitlab/mbedtls-3.4.0" CACHE PATH "Path to mbedTLS sources")
 
 # require C99 standard
 set(C_STANDARD 99)
@@ -13,7 +14,7 @@ if (CW_ENV_DEBUG_ENABLE)
 add_definitions(-DMBEDTLS_DEBUG_C)
 endif()
 
-add_definitions(-DMBEDTLS_CONFIG_FILE="user_settings.h")
+add_definitions(-DMBEDTLS_CONFIG_FILE="mbed_settings.h")
 
 option(ENABLE_PROGRAMS "" OFF)
 option(ENABLE_TESTING "" OFF)
