--- a/wolfssl/CMakeLists.txt
+++ b/wolfssl/CMakeLists.txt
@@ -13,8 +13,8 @@ option(WOLFSSL_USER_IO "" OFF)
 option(WOLFSSL_DEBUG "" OFF)
 set(WOLFSSL_DTLS "yes" CACHE STRING "")
 set(BUILD_DTLS_COMMON "yes" CACHE STRING "")
-set(BUILD_SP "no" CACHE STRING "")
-set(BUILD_SP_X86_64 "no" CACHE STRING "")
+set(BUILD_SP "yes" CACHE STRING "")
+set(BUILD_SP_C "yes" CACHE STRING "")
 set(WOLFSSL_ECCSHAMIR "no" CACHE STRING "")
 set(WOLFSSL_CRYPT_TESTS "no" CACHE STRING "")
 set(WOLFSSL_EXAMPLES "no" CACHE STRING "")
