--- a/include/tlsbm/Environment.h.in
+++ b/include/tlsbm/Environment.h.in
@@ -8,10 +8,10 @@
 /// Copyright (c) 2023 Rockwell Automation Technologies, Inc.
 /// All rights reserved.
 //==============================================================================
-#if !defined(CW_ENVIRONMENT_H)
-#define CW_ENVIRONMENT_H
+#if !defined(TLSBM_ENVIRONMENT_H)
+#define TLSBM_ENVIRONMENT_H
 
 
-#cmakedefine CW_ENV_DEBUG_ENABLE
+#cmakedefine TLSBM_ENV_DEBUG_ENABLE
 
-#endif // !defined(CW_ENVIRONMENT_H)
+#endif // !defined(TLSBM_ENVIRONMENT_H)
